Bug 1265262 - Check for null root branch when registering pref watcher. r=froydnj a=lizzard CLOSED TREE

--HG--
extra : source : 548b35e65fe7e8d3a48f978ce3e8178df3b37753
extra : amend_source : f2a14338659d70bfcef1abcfc0ad0d181c12f286